--- a/Views/Shared/_PartialInquiry.cshtml
+++ b/Views/Shared/_PartialInquiry.cshtml
@@ -7,11 +7,11 @@
         <table class="cart-table">
             <thead>
                 <tr>
-                    <th>Ürün</th>
-                    <th>Fiyat</th>
-                    <th>Miktar</th>
-                    <th>Toplam</th>
-                    <th>Sil</th>
+                    <th style="color:white;background-color:#222222">Ürün</th>
+                    <th style="color:white;background-color:#222222">Fiyat</th>
+                    <th style="color:white;background-color:#222222">Miktar</th>
+                    <th style="color:white;background-color:#222222">Toplam</th>
+                    <th style="color:white;background-color:#222222">Sil</th>
                 </tr>
             </thead>
 
@@ -63,7 +63,7 @@
             <ul>
                 <li><strong>Genel Toplam</strong><strong id="cart-total">@Model.TotalAmount ₺</strong></li>
             </ul>
-            <a class="checkout-btn theme-btn proceed-btn" id="checkout-inquiry" style="cursor:pointer;">İstek Gönder</a>
+            <a class="checkout-btn theme-btn proceed-btn" style="background-color:#FFB22F;color:black;" id="checkout-inquiry" style="cursor:pointer;">İstek Gönder</a>
         </div>
     </div>
 }   
